--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
   "builds": [
     {
       "src": "client/package.json",
-      "use": "@vercel/vite",
+      "use": "@vercel/static-build",
       "config": { "distDir": "dist" }
     },
     {
-      "src": "server/index.js",
+      "src": "server/server.js",
       "use": "@vercel/node"
     }
   ],
