--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,9 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": {
+        "distDir": "client/dist"
+      }
     },
     {
       "src": "server/server.js",
@@ -14,7 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/index.js"
+      "dest": "server/server.js"
     },
     {
       "src": "/(.*)",
